Enviando atualizacoes