@@ -1,17 +1,23 @@
 package com.alm.crudspring.service;
 
+import java.util.List;
+import java.util.stream.Collectors;
+
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.stereotype.Service;
+import org.springframework.validation.annotation.Validated;
+
 import com.alm.crudspring.dto.CourseDTO;
+import com.alm.crudspring.dto.CoursePageDTO;
 import com.alm.crudspring.dto.mapper.CourseMapper;
 import com.alm.crudspring.exception.RecordNotFoundException;
 import com.alm.crudspring.model.Course;
 import com.alm.crudspring.repository.CourseRepository;
+
 import jakarta.validation.Valid;
 import jakarta.validation.constraints.NotNull;
 import jakarta.validation.constraints.Positive;
-import org.springframework.stereotype.Service;
-import org.springframework.validation.annotation.Validated;
-
-import java.util.List;
 
 @Validated
 @Service
@@ -25,11 +31,15 @@ public class CourseService {
     this.courseMapper = courseMapper;
   }
 
-  public List<CourseDTO> list() {
-    return repository.findAll()
-        .stream()
-        .map(courseMapper::toDTO)
-        .toList();
+  public CoursePageDTO list(int page, int size) {
+    Page<Course> pageCourse = repository.findAll(PageRequest.of(page, size));
+    List<CourseDTO> courses = pageCourse.get().map(courseMapper::toDTO).collect(Collectors.toList());
+
+    return new CoursePageDTO(courses, pageCourse.getTotalElements(), pageCourse.getTotalPages());
+    // return repository.findAll()
+    // .stream()
+    // .map(courseMapper::toDTO)
+    // .toList();
 
   }
 
@@ -42,12 +52,16 @@ public class CourseService {
     return courseMapper.toDTO(repository.save(courseMapper.toEntity(course)));
   }
 
-  public CourseDTO update(@NotNull @Positive Long id, CourseDTO course) {
+  public CourseDTO update(@NotNull @Positive Long id, CourseDTO courseDTO) {
 
     return repository.findById(id)
         .map(recordFound -> {
-          recordFound.setName(course.name());
-          recordFound.setCategory(courseMapper.convertCategoryValue(course.category()));
+          Course course = courseMapper.toEntity(courseDTO);
+          recordFound.setName(courseDTO.name());
+          recordFound.setCategory(courseMapper.convertCategoryValue(courseDTO.category()));
+          recordFound.getLessons().clear();
+
+          course.getLessons().forEach(recordFound.getLessons()::add);
           return courseMapper.toDTO(repository.save(recordFound));
         })
         .orElseThrow(() -> new RecordNotFoundException(id));
